--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,11 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "truffle-hdwallet-provider": "^1.0.17",
+    "web3": "^1.2.1",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1"
   }
 }
